Fixed Footer. Added Consistency on small screens

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -233,4 +233,9 @@ div.tab-pane {
 }
 .responsive {
     overflow-x: auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+        display: none;
+    }
 }
